<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/elapsedTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/elapsed_time" />

            <TextView
                android:id="@+id/elapsedTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/idleTimeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idle_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/idleTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/mirrorCameraCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_2" />

            <CheckBox
                android:id="@+id/frontCameraCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_1" />

            <ToggleButton
                android:id="@+id/engineToggleButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/key_toggle_button" />

            <TextView
                android:id="@+id/watchTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/indicatorsRelativeLayout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2.5" >

            <FrameLayout
                android:id="@+id/camera_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true" >
            </FrameLayout>

            <TextView
                android:id="@+id/altimiterLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:text="@string/altitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/altimiterIndicatorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/altimiterLabelTextView"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/optionsMenuImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:contentDescription="Open Action Bar"
                android:src="@drawable/menu_moreoverflow_normal_holo_light_rotate_90" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home_layout"
        android:layout_alignParentBottom="true" />

</RelativeLayout>